--- a/settings/config.json
+++ b/settings/config.json
@@ -1,7 +1,7 @@
 {
-	"ownername":"ZeeoneOfc",
-	"ownernumber":"62887435047326",
-	"botname":"Haruka-Bot",
+	"ownername":"XyntaOfc",
+	"ownernumber":"6281262411188",
+	"botname":"Caca-Bot",
 	"thumbnail":"./settings/haruka.jpg",
 	"session_name":"./session.json"
 }
